--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.PrivyTest"
+        android:usesCleartextTraffic="true"
+        android:largeHeap="true"
         tools:targetApi="31">
         <activity
             android:name=".weatherpage.MainActivity"
