--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     //lifecycle
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+    implementation 'androidx.activity:activity-ktx:1.8.1'
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
 
     def coroutinesVersion = '1.4.3'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
